[package]
name = "zlayer-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Container runtime agent using libcontainer/youki"
publish = false
keywords = ["container", "runtime", "youki", "libcontainer", "orchestration"]
categories = ["os", "virtualization"]
readme = "README.md"

[features]
default = []
# Linux-native container runtime via libcontainer/youki. OFF by default so the
# crate publishes cleanly: the published `libcontainer 0.6.0` on crates.io has
# strict pins (`protobuf = =3.2.0`, `rust-criu = ^0.4.0`) that conflict with
# our git-rev pin's relaxed deps. `bin/zlayer` enables this feature; downstream
# consumers (e.g. zfunctions in Zatabase) that don't need the Linux runtime
# leave it off.
youki-runtime = ["dep:libcontainer"]
docker = ["dep:bollard"]
wasm = [
    "dep:wasmtime",
    "dep:wasmtime-wasi",
    "dep:wasmtime-wasi-http",
    "dep:bytes",
    "dep:http",
    "dep:http-body-util",
    "dep:hyper",
    "dep:anyhow",
    "dep:sha2",
]
s3 = ["zlayer-init-actions/s3", "zlayer-registry/s3", "dep:zlayer-storage"]

[dependencies]
async-trait.workspace = true
chrono.workspace = true
cron.workspace = true
parking_lot.workspace = true
zlayer-init-actions.workspace = true
libc.workspace = true
nix.workspace = true
oci-client.workspace = true
oci-spec.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
zlayer-secrets.workspace = true
zlayer-spec.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
zlayer-core.workspace = true
zlayer-observability.workspace = true
zlayer-proxy.workspace = true
zlayer-registry = { workspace = true, features = ["persistent", "local"] }
zlayer-overlay.workspace = true
ipnetwork = "0.21.1"
num_cpus.workspace = true
zlayer-scheduler.workspace = true
zlayer-storage = { workspace = true, optional = true }
ulid = "1.2.1"
jsonwebtoken.workspace = true

# Streaming utilities (needed for Docker streaming)
futures-util.workspace = true

# Docker runtime support (optional)
# Features:
# - ssl: TLS support for secure connections
# - time: Timestamp support
# - pipe: Unix socket/Windows named pipe support (required for connect_with_local_defaults)
# - http: HTTP transport support
bollard = { version = "0.20", default-features = false, features = ["ssl", "time", "pipe", "http"], optional = true }

# WebAssembly runtime support (optional)
# Features:
# - async: Tokio integration for async execution
# - cranelift: JIT compilation backend
# - component-model: WASIp2 component model support
wasmtime = { version = "41", default-features = false, features = ["async", "cranelift", "component-model"], optional = true }
wasmtime-wasi = { version = "41", optional = true }
wasmtime-wasi-http = { version = "41", optional = true }

# HTTP types for WASM HTTP handler support (enabled with wasm feature)
bytes = { version = "1", optional = true }
http = { version = "1", optional = true }
http-body-util = { version = "0.1", optional = true }
hyper = { version = "1", optional = true }
anyhow = { version = "1", optional = true }
sha2 = { workspace = true, optional = true }
zlayer-paths.workspace = true

# Linux-specific dependencies for native container runtime (youki/libcontainer)
# Pinned to commit that fixes socket bind mount (youki-dev/youki#3484).
# TODO: Switch to libcontainer = "0.6.1" once released (youki-dev/youki#3440)
[target.'cfg(target_os = "linux")'.dependencies]
libcontainer = { version = "0.6.0", git = "https://github.com/youki-dev/youki", rev = "a68a38c422b56125620749f7a7c072a01d245e87", optional = true }
rtnetlink = "0.14"
# Must match the version used internally by rtnetlink 0.14 so
# RouteScope and other route-message types line up across crate boundaries.
netlink-packet-route = "0.19"

# macOS-specific dependencies for sandbox and VM runtimes
[target.'cfg(target_os = "macos")'.dependencies]
dirs = "5"
libloading = "0.8"

[dev-dependencies]
rand = { workspace = true }
tempfile = "3.24.0"
wat = "1.244.0"

[lints]
workspace = true
