[package]
name = "zlayer-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "REST API server for ZLayer container orchestration"
keywords = ["container", "api", "rest", "axum", "orchestration"]
categories = ["web-programming::http-server"]
readme = "README.md"

[dependencies]
# Internal crates
zlayer-agent = { path = "../zlayer-agent" }
zlayer-builder = { path = "../zlayer-builder" }
zlayer-spec = { path = "../zlayer-spec" }
zlayer-scheduler = { path = "../zlayer-scheduler" }
zlayer-observability = { path = "../zlayer-observability" }

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
hyper-util.workspace = true

# Authentication
jsonwebtoken.workspace = true

# Rate limiting
governor.workspace = true
tower_governor.workspace = true

# OpenAPI
utoipa.workspace = true
utoipa-swagger-ui.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Tracing
tracing.workspace = true

# Time
time.workspace = true
chrono.workspace = true

# UUID
uuid.workspace = true

# Streaming
tokio-stream.workspace = true
futures-util.workspace = true

# Archive handling
tar.workspace = true
flate2.workspace = true

# Embedded database
redb = "2"

# Temp directories for tests
[dev-dependencies]
tempfile = "3"
