[package]
name = "zlayer-api-zql"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "REST API server for ZLayer container orchestration"
keywords = ["container", "api", "rest", "axum", "orchestration"]
categories = ["web-programming::http-server"]
readme = "README.md"

[dependencies]
# Internal crates
zlayer-agent.workspace = true
zlayer-builder.workspace = true
zlayer-overlay.workspace = true
zlayer-proxy.workspace = true
zlayer-spec.workspace = true
zlayer-scheduler.workspace = true
zlayer-observability.workspace = true
zlayer-secrets.workspace = true
zlayer-storage.workspace = true

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
hyper-util.workspace = true

# Authentication
jsonwebtoken.workspace = true
secrecy.workspace = true

# Rate limiting
governor.workspace = true
tower_governor.workspace = true

# OpenAPI
utoipa.workspace = true
utoipa-swagger-ui.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Tracing
tracing.workspace = true

# Time
time.workspace = true
chrono.workspace = true

# UUID
uuid.workspace = true

# Base64 encoding/decoding (for join tokens)
base64.workspace = true

# Cryptography (for token hashing)
sha2.workspace = true
hex.workspace = true

# HTTP client (for peer broadcast)
reqwest.workspace = true

# Synchronization
parking_lot.workspace = true
dashmap.workspace = true

# Streaming
tokio-stream.workspace = true
futures-util.workspace = true

# Archive handling
tar.workspace = true
flate2.workspace = true

# Embedded database
zql.workspace = true

# Temp directories for tests
[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
