[package]
name = "zlayer-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "REST API server for ZLayer container orchestration"
publish = false
keywords = ["container", "api", "rest", "axum", "orchestration"]
categories = ["web-programming::http-server"]
readme = "README.md"

[[bin]]
name = "openapi-spec"
path = "src/bin/openapi_spec.rs"

[dependencies]
# Internal crates
zlayer-agent.workspace = true
zlayer-builder.workspace = true
zlayer-core.workspace = true
# Wire types crate — `Stored*` DTOs and shared serde shapes live here so
# SDK clients can deserialize without pulling in axum/sqlx/tokio. Path-based
# (no workspace alias) since the workspace `Cargo.toml` does not yet declare
# `zlayer-types` under `[workspace.dependencies]`.
zlayer-types = { version = "0.1.0", path = "../zlayer-types", features = ["utoipa"] }
oci-client.workspace = true
zlayer-git.workspace = true
zlayer-proxy.workspace = true
zlayer-overlay.workspace = true
zlayer-spec.workspace = true
zlayer-scheduler.workspace = true
zlayer-observability.workspace = true
zlayer-secrets.workspace = true
zlayer-storage.workspace = true
# Central filesystem path resolution (admin bearer token persistence).
zlayer-paths.workspace = true

# Web framework
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
hyper-util.workspace = true

# Authentication
jsonwebtoken.workspace = true
secrecy.workspace = true

# Rate limiting
governor.workspace = true
tower_governor.workspace = true

# OpenAPI
utoipa.workspace = true
utoipa-swagger-ui.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Tracing
tracing.workspace = true

# Time
time.workspace = true
chrono.workspace = true
# humantime parses duration strings like "10s", "30s", "1m" for
# `HealthCheckRequest` interval/timeout/start_period fields.
humantime = "2"

# UUID
uuid.workspace = true

# Base64 encoding/decoding (for join tokens)
base64.workspace = true

# Cryptography (for token hashing)
sha2.workspace = true
hmac.workspace = true
hex.workspace = true
subtle.workspace = true

# Random number generation (for CSRF tokens)
rand.workspace = true

# HTTP client (for peer broadcast)
reqwest.workspace = true

# OIDC / OAuth2 for /auth/oidc handlers
openidconnect.workspace = true
oauth2.workspace = true
url.workspace = true

# SMTP (for the SMTP notifier test/send endpoint).
lettre.workspace = true

# Synchronization
parking_lot.workspace = true
dashmap.workspace = true

# CIDR / IP parsing (bridge-network subnet validation)
ipnetwork = "0.21.1"

# Streaming
tokio-stream.workspace = true
futures-util.workspace = true

# Archive handling
tar.workspace = true
flate2.workspace = true

# Embedded database
sqlx.workspace = true

# Docker bridge-network runtime (optional — only when `docker` feature is
# enabled by the binary). Kept default-features-off + minimal features to
# mirror the settings in `zlayer-agent`.
bollard = { version = "0.20", default-features = false, features = ["ssl", "time", "pipe", "http"], optional = true }

[features]
default = []
# Enables the Docker-backed `BridgeNetworkRuntime` implementation used by
# `bin/zlayer` when the daemon runs on a host with Docker available.
docker = ["dep:bollard"]

# Temp directories for tests
[dev-dependencies]
tempfile = "3"
serial_test = "3"
# `test-util` enables `#[tokio::test(start_paused = true)]` and virtual-time
# helpers used by the container log-follow termination test.
tokio = { workspace = true, features = ["test-util"] }
# RSA keypair generation + JWK export for the OIDC integration test's
# in-process mock IdP. jsonwebtoken 9 handles the RS256 JWT signing itself
# once we hand it a PKCS#1 DER-encoded private key.
rsa = "0.9"
jsonwebtoken.workspace = true

[lints]
workspace = true
