[package]
name = "zlayer-builder"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Dockerfile parsing and buildah-based container image building"
keywords = ["container", "docker", "dockerfile", "buildah", "image"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"

[dependencies]
# Dockerfile parsing
dockerfile-parser = "0.9"

# Core
anyhow.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full", "process"] }
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# Serialization
serde_yaml.workspace = true

# Hashing
sha2.workspace = true
hex.workspace = true

# ZImagefile support
indexmap = { version = "2", features = ["serde"] }
humantime = "2"

# Platform detection
dirs = "5"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Cache backend (optional)
zlayer-registry = { path = "../zlayer-registry", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
# Enable remote cache backend integration with zlayer-registry
cache = ["zlayer-registry"]
# Enable persistent disk-based cache (requires cache feature)
cache-persistent = ["cache", "zlayer-registry/persistent"]
# Enable S3-compatible storage backend (requires cache feature)
cache-s3 = ["cache", "zlayer-registry/s3"]
# Enable local OCI registry for image resolution (check local store before pulling)
local-registry = ["cache", "zlayer-registry/local"]
