[package]
name = "zlayer-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
base64 = "0.22"
dirs = "5.0"
oci-client.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing = "0.1"
spec = { path = "../spec" }
