[package]
name = "zlayer-git"
description = "Git operations for ZLayer project management"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
gix.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true
zlayer-paths.workspace = true
zlayer-types.workspace = true

[lints]
workspace = true
